--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,13 @@
     "theme_color": "#007bff",
     "icons": [
         {
-            "src": "icon-80.png",
-            "sizes": "80x80",
+            "src": "video-256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "video-512.png",
+            "sizes": "512x512",
             "type": "image/png"
         }
     ]
